Money Manager 21.4.9
* Java 17
* Prepare for multi-module project